Fix overflow issue iOS (when installed on home screen)

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,6 +37,8 @@ html {
 	-moz-osx-font-smoothing: grayscale;
 
 	font-size: 16px;
+
+	overflow: hidden;
 }
 
 body {
